<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:textSize="25sp"
            android:text="@string/TaskDueDate" />

        <TextView
            android:id="@+id/frgDueDate"
            android:width="200dp"
            android:gravity="center"
            android:textSize="25sp" />

    </TableRow>

    <TimePicker
        android:id="@+id/time_picker_frg"
        />
    <TableRow>

        <Button
            android:id="@+id/btnModifyDateOK"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnModifyDateCancel"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/btnCancel" />

    </TableRow>
</TableLayout>