<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivPriority"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:padding="5dp"
        android:src="@drawable/ic_low_priority"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="178dp"
            android:layout_height="43dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="19dp"
            android:layout_toStartOf="@+id/tvCategory"
            android:text="@string/TaskTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="132dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:text="@string/Taskcategory"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDueDate"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@id/tvTitle"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/TaskDueDate"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="51dp"
            android:text="@string/weekly_task"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>